--- a/registo.html
+++ b/registo.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="login">
   <div class="container">
     <button type="button" class="btn btn-back custom-text-color" onclick="window.location.href='login.html'">Back</button>
-    <h2 class="mt-5">Registro</h2>
+    <h2>Registro</h2>
     <!-- Formulário de registro -->
     <form>
       <div class="form-group">
