--- a/functions.html
+++ b/functions.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="login">
   <div class="container">
     <button type="button" class="btn btn-back custom-text-color" onclick="window.location.href='Projeto.html'">Back</button>
-    <h2 class="mt-5">Funções</h2>
+    <h2>Funções</h2>
     <p class="georgia-font">Aqui você encontrará uma variedade de recursos para ajudá-lo a gerenciar suas finanças pessoais:</p>
     <ul>
       <li class="georgia-font">Registro de despesas e receitas</li>
