--- a/login.html
+++ b/login.html
@@ -8,24 +8,24 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="login">
-  <div class="container">
-    <button type="button" class="btn btn-back custom-text-color" onclick="window.location.href='Projeto.html'">Back</button>
+  <div class="container2">
+    <button type="button" class="btn btn-back custom-text-color" >Back</button>
     <h2 class="mt-5">Iniciar Sessão</h2>
-    <!-- Formulário de login -->
+   
     <form class="login-form">
       <div class="form-group">
-        <label for="username">Nome de usuário:</label>
+        <label for="username">Nome de utilizador:</label>
         <input type="text" class="form-control" id="username" name="username">
       </div>
       <div class="form-group">
         <label for="password">Senha:</label>
         <input type="password" class="form-control" id="password" name="password">
       </div>
-      <button type="submit" class="btn btn-primary">Entrar</button>
+      <button type="button" class="btn btn-primary" onclick="window.location.href = 'perfil.html';">Entrar</button>
     </form>
-    <!-- Opção para ir para a página de registro -->
+    
     <div class="mt-3">
-      <p>Não tem uma conta? <a href="registo.html">Registrar agora</a></p>
+      <p>Não tem uma conta? <a href="registo.html">Registar agora</a></p>
     </div>
   </div>
 
