--- a/registo.html
+++ b/registo.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registro - CashFlow</title>
+  <title>Registo - CashFlow</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="login">
-  <div class="container">
+  <div class="container2">
     <button type="button" class="btn btn-back custom-text-color" onclick="window.location.href='login.html'">Back</button>
-    <h2>Registro</h2>
-    <!-- Formulário de registro -->
+    <h2>Registo</h2>
+    
     <form>
       <div class="form-group">
-        <label for="username">Nome de usuário:</label>
+        <label for="username">Nome de utilizador:</label>
         <input type="text" class="form-control" id="username" name="username">
       </div>
       <div class="form-group">
@@ -24,8 +24,12 @@
       <div class="form-group">
         <label for="password">Senha:</label>
         <input type="password" class="form-control" id="password" name="password">
+        <div>
+          <p>Concordo com os <span class="terms-link" onclick="window.location.href='termos.html'">termos de uso</span></p>
+          <div class="cross"></div>
+        </div>
       </div>
-      <button type="submit" class="btn btn-primary">Registrar</button>
+      <button type="submit" class="btn btn-primary">Registar</button>
     </form>
   </div>
 </body>
