--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="login">
+<body class="about">
   <div class="container">
     <button type="button" class="btn btn-back custom-text-color" onclick="window.location.href='Projeto.html'">Back</button>
     <h2>Sobre Nós</h2>
-    <p class="georgia-font">A CashFlow é uma plataforma de gestão financeira pessoal que permite aos usuários controlar suas finanças de forma simples e eficiente.</p>
+    <p class="georgia-font">A CashFlow é uma plataforma de gestão financeira pessoal que permite aos utilizadores controlar suas finanças de forma simples e eficiente.</p>
     <p class="georgia-font">Nosso objetivo é fornecer ferramentas e recursos que ajudem as pessoas a alcançar suas metas financeiras e tomar decisões informadas sobre o dinheiro.</p>
   </div>
 </body>
