--- a/functions.html
+++ b/functions.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="login">
+<body class="about">
   <div class="container">
     <button type="button" class="btn btn-back custom-text-color" onclick="window.location.href='Projeto.html'">Back</button>
     <h2>Funções</h2>
